--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,13 @@
 <p>header works!</p>
+
+<nav>
+    <img src="https://angular.io/assets/images/logos/angular/angular.svg" alt="angular">
+    <ul>
+        <li>
+            <a href="#"> Home</a>
+            <a href="#"> About</a>
+            <a href="#"> Login</a>
+            <a href="#"> Users</a>
+        </li>
+    </ul>
+</nav>
