--- a/src/app/user-list/user-list.component.html
+++ b/src/app/user-list/user-list.component.html
@@ -1,1 +1,4 @@
-<h2 class="custom">user-list works!</h2>
+<!-- <h2 class="custom">user-list works!</h2> -->
+<!-- <p>user details</p> -->
+<li>{{item.name}}</li>
+<li>{{item.email}}</li>
