--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -125,7 +125,7 @@
 <h2>{{000.3400 | number: '1.2-3'}}</h2>
 <h2>{{100 | currency: 'INR'}}</h2> -->
 <br /><br />
-<form #loginForm="ngForm" (ngSubmit)="loginUser(loginForm.value)">
+<!-- <form #loginForm="ngForm" (ngSubmit)="loginUser(loginForm.value)">
   <input type="email" required #name="ngModel"  name="name" placeholder="Enter username" ngModel>
   <br />
   <span *ngIf="name.invalid && name.touched" style="color: red">Please Enter valid input</span>
@@ -134,9 +134,23 @@
   <br />
   <span *ngIf="password.invalid && password.touched" style="color: red">Please Enter valid input</span><br />
   <button [disabled]="loginForm.invalid">Login</button>
-</form>
+</form> -->
 
-
+<!-- <form [formGroup]="loginForm" (ngSubmit)="loginUser(loginForm.value)">
+  <input type="text" placeholder="enter name"  formControlName="user">
+  <br />
+  <span *ngIf="user && user.invalid && user.touched">This is invalid field</span>
+  <br />
+  <input type="password" placeholder="enter password" formControlName="password">
+  <br /><br />
+  <button>Submit</button>
+</form> -->
+ <!-- <h1 appRedEl >{{title}}</h1> -->
+<a routerLink="">Home</a>
+<br /><br />
+<a routerLink="about">About</a>
+<br /><br />
+<router-outlet></router-outlet>
 
 </div>
 
