--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -150,6 +150,12 @@
 <br /><br />
 <a routerLink="about">About</a>
 <br /><br />
+
+<a routerLink="about/10">Location</a>
+<br /><br />
+<a routerLink="about/20">Contact</a>
+<br /><br />
+
 <router-outlet></router-outlet>
 
 </div>
