app rout child route

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,3 +1,8 @@
 <p>about works!</p>
 
 <h2>this is user id: {{userID}}</h2>
+
+<a routerLink="company">About Company</a>
+<br/>
+<a routerLink="me">About Me</a>
+<router-outlet></router-outlet>
