--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -181,12 +181,15 @@
   <button>submit</button>
 </form> -->
 
-<h2>Admin link</h2>
+<!-- <h2>Admin link</h2>
 <ul>
   <li><a routerLink="admin/login">Login</a></li>
   <li><a routerLink="admin/list">List</a></li>
-</ul>
+</ul> -->
+
+<button (click)="loadAdmin()"> Load Admin component</button>
+<button (click)="loadUser"> Load User component</button>
 
 </div>
 
-<router-outlet></router-outlet>
+<!-- <router-outlet></router-outlet> -->
